# appmate-twenty-mcp

./: QUIRKS.md  README.md  pyproject.toml
src/appmate_twenty_mcp/: __init__.py  client.py  server.py
src/appmate_twenty_mcp/tools/: __init__.py  companies.py  notes.py  opportunities.py  people.py  tasks.py  workspace.py
